--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
-  "mypy.runUsingActiveInterpreter": true,
-  "python.formatting.autopep8Args": [
-      "--max-line-length=140"
-  ],
+    "[python]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4  
+    },
+
+    "mypy.runUsingActiveInterpreter": true,
+    "python.formatting.autopep8Args": [
+        "--max-line-length=140"
+    ],
+    "python.formatting.provider": "black",
 
 }
