--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,16 @@ packages = [{include = "src/**/*.py"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
+whylabs-client = "^0.4.2"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^0.990"
 pytest = "^7.2.0"
 black = "^22.10.0"
+mypy = "^0.991"
+jupyterlab = "^3.5.1"
+
+[tool.black]
+line-length = 140
 
 [build-system]
 requires = ["poetry-core"]
