--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,30 +1,19 @@
-name: Workflow
+name: Whylabs Package Workflow
 
 on:
   push:
-    branches: ["master"]
+    branches: ["mainline"]
   pull_request:
     branches: ["*"]
 
 jobs:
   publish_templates:
-    name: Push the latest versions of the templates to GCS
-    timeout-minutes: 30
+    name: Run lints and tests on PRs and merges
+    timeout-minutes: 10
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: "read"
-      id-token: "write"
 
     steps:
       - uses: actions/checkout@v3
-
-      - id: "auth"
-        uses: "google-github-actions/auth@v1"
-        name: "Authenticate to Google Cloud"
-        with:
-          workload_identity_provider: "projects/205017367875/locations/global/workloadIdentityPools/github-ci/providers/dataflow-templates-ci"
-          service_account: "dataflow-template-github-ci@whylogs-359820.iam.gserviceaccount.com"
 
       - uses: actions/setup-python@v4
         name: Install Python
@@ -47,29 +36,3 @@ jobs:
 
       - name: Run test
         run: make test
-
-      - name: Upload template to GCS
-        if: ${{ github.event_name == 'pull_request' }}
-        run: poetry run make batch_bigquery_template SHA=${{github.sha}}
-
-      - name: Do a test job
-        if: ${{ github.event_name == 'pull_request' }}
-        run: | 
-          echo "Use the GCP console to verify that this test succeeds for the manual approval https://console.cloud.google.com/dataflow/jobs?project=whylogs-359820"
-          make integ NAME=pr-${{github.event.pull_request.number}}-${{github.sha}} \
-            SHA=${{github.sha}} \
-            WHYLABS_API_KEY=${{secrets.WHYLABS_API_KEY}} 
-
-      - name: Upload template to GCS as 'latest'
-        if: ${{ github.event_name == 'push' }}
-        run: poetry run make batch_bigquery_template_latest
-
-  approve_integ_test:
-    name: Approve the integ test from the main workflow in GCS console
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    environment: 
-      name: main
-
-    steps:
-      - uses: actions/checkout@v3
