fixing lint and format

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 warn_redundant_casts = True
 ignore_missing_imports = True
-warn_unused_ignores = True
+warn_unused_ignores = False
 
 # Needed because of bug in MyPy
 disallow_subclassing_any = False
