--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "whylabs/**/*.py"}]
 [tool.poetry.dependencies]
 python = ">=3.8"
 whylabs-client = "^0.4.2"
+types-requests = "^2.28.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
